<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <EditText
        android:id="@+id/editTextTaskState"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="task state"
        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/editTextTaskBody"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Select image"
        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.738"
        app:layout_constraintStart_toEndOf="@+id/editTextTaskTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:text="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:text="Submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toEndOf="@+id/addTaskButton"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTaskTitle"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="task name"
        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
        app:layout_constraintEnd_toStartOf="@+id/editTextTaskBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <RadioGroup
        android:id="@+id/teamSelection"
        android:layout_width="136dp"
        android:layout_height="141dp"
        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskState"
        app:layout_constraintVertical_bias="0.131">

        <RadioButton
            android:id="@+id/redTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Red Team" />

        <RadioButton
            android:id="@+id/greenTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Green Team" />

        <RadioButton
            android:id="@+id/blueTeam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Blue Team"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageViewS3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
        app:layout_constraintEnd_toEndOf="@+id/editTextTaskTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamSelection"
        app:layout_constraintVertical_bias="0.592"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Image"
        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewS3"
        app:layout_constraintTop_toBottomOf="@+id/teamSelection" />


</androidx.constraintlayout.widget.ConstraintLayout>